--- a/conf/app.ini
+++ b/conf/app.ini
@@ -1,15 +1,20 @@
-
 [app]
 PageSize = 10
 JwtSecret = 233
+PrefixUrl = http://127.0.0.1:8000
 
 RuntimeRootPath = runtime/
 
-ImagePrefixUrl = http://127.0.0.1:8000
 ImageSavePath = upload/images/
 
+# MB
 ImageMaxSize = 5
-ImageAllowExts = .jpg, .jpeg, .png
+ImageAllowExts =.jpg,.jpeg,.png
+
+
+ExportSavePath = export/
+QrCodeSavePaht = qrcode/
+FontSavePath = fonts/
 
 LogSavePath = logs/
 LogSaveName = log
@@ -27,6 +32,15 @@ Type = mysql
 User = root
 Password = password
 #127.0.0.1:3306
-Host = mysql:3306
+Host = 127.0.0.1:3306
 Name = blog
 TablePrefix = blog_
+
+# redis 连接池
+[redis]
+Host = 127.0.0.1:6379
+Password =
+MaxIdle = 30
+MaxActive = 30
+IdleTimeout = 200
+
